Compilation/test/valides/test-table-symboles.tpc
/* test-table-symboles.tpc */

/* Test file for simplified translator of a declaration of variables in C */
int r1,b,s,c,r2;
char letter, digit, punct;

int main(void){
  r2= 1;
  b=r1+r2;
  punct='a';
  return 0;
}
