Compilation/test/invalides/test-table-symboles4.tpc
/* test-table-symboles.tpc */

/* Test file for simplified translator of a declaration of variables in C */
int r1,b,s,c,r2;
char letter, digit, punct;
int a, m;
char super;

int ok(int a){
	return 1;
}

int main(int a, int u, char dac)  {
  int cool;
  cool = 1;
  r1=12;
  r2=24;
  b=r1+r2;
  punct='.';
  return b;
}
